<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="note"
            type="domain.model.NoteModel" />

        <variable
            name="viewHolder"
            type="app.views.homeactivity.NotesViewHolder" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/note_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{(view) -> viewHolder.onItemClicked(note)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aclonica"
                    android:maxLines="1"
                    android:text="@{note.title}"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    tools:text="@sample/notes.json/notes/title" />


                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:drawablePadding="@dimen/spacing_medium"
                    android:fontFamily="serif-monospace"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@{note.userName}"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:layout_editor_absoluteX="16dp"
                    tools:text="@sample/notes.json/notes/username" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:drawablePadding="@dimen/spacing_medium"
                    android:fontFamily="serif-monospace"
                    android:inputType="textPassword|textNoSuggestions"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@{note.password}"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username"
                    tools:ignore="TextViewEdits"
                    tools:layout_editor_absoluteX="16dp"
                    tools:text="@sample/notes.json/notes/password" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</layout>