<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="app.views.loginfragment.LoginFragmentViewModel" />

        <variable
            name="presenter"
            type="app.views.loginfragment.LoginFragmentPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/launch_activity_email_hint"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/et_password"
                android:nextFocusDown="@+id/et_password"
                android:onTextChanged="@{presenter::onEtEmailChanged}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/launch_activity_password_hint"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/btn_login"
                android:nextFocusDown="@+id/btn_login"
                android:onTextChanged="@{presenter::onEtPasswordChanged}" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.validEmail &amp;&amp; viewModel.validPassword}"
            android:onClick="@{presenter::onloginButtonClicked}"
            android:text="@string/launch_activity_login" />

        <Button
            android:id="@+id/btn_login_with_gmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/launch_activity_login_with_gmail" />

    </LinearLayout>
</layout>
