...
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:checkedButton="@{viewModel.currentStateId}"
                    android:onCheckedChanged="@{presenter::onSwitchChanged}"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/group_login"
                        style="@style/SwitchButtonLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />

                    <RadioButton
...
